fix all mobile overflow issues

--- a/src/resources/postcss/tribe-common-admin.pcss
+++ b/src/resources/postcss/tribe-common-admin.pcss
@@ -4049,7 +4049,7 @@ input[type="email"].tribe-events-admin-card__input {
 	width: 25%;
 
 	@media only screen and (max-width: 480px)  {
-		width: 100%;
+		width: auto;
 		flex-direction: column;
 		align-items: flex-start;
 	}
@@ -4059,7 +4059,7 @@ input[type="email"].tribe-events-admin-card__input {
 	width: 45%;
 
 	@media only screen and (max-width: 480px)  {
-		width: 100%;
+		width: auto;
 	}
 }
 
@@ -4069,15 +4069,8 @@ input[type="email"].tribe-events-admin-card__input {
 	justify-content: flex-end;
 
 	@media only screen and (max-width: 480px)  {
-		width: 100%;
+		width: auto;
 		flex-direction: column;
-	}
-}
-
-.tribe-events-admin__ea-status-table td:nth-child(3) a {
-
-	@media only screen and (max-width: 480px)  {
-		margin-right: 50px;
 	}
 }
 
